@startuml BasketballDB_ERD
'================================================
' Basketball League Database — Entity-Relationship
' Notation: Crow's Foot  (UML/IE style)
'   ||--o{  =  one (mandatory) to zero-or-many
'   ||--||  =  one (mandatory) to one (mandatory)
'================================================

skinparam backgroundColor #0D0D0D
skinparam defaultFontColor #CCCCCC
skinparam defaultFontName Consolas

skinparam entity {
    BackgroundColor #1A1A1A
    BorderColor     #F05A28
    FontColor       #FFFFFF
    HeaderBackgroundColor #F05A28
    HeaderFontColor #FFFFFF
}

skinparam arrow {
    Color #F05A28
    FontColor #CCCCCC
}

'================================================
' ENTITIES
'================================================

entity "Basketball.Location" as LOC {
  * **LocationID** : INT  <<PK, IDENTITY>>
  --
  City    : NVARCHAR(64)  NOT NULL
  State   : NVARCHAR(64)  NOT NULL
  Country : NVARCHAR(64)  NOT NULL
  ..unique..
  (City, State, Country)
}

entity "Basketball.League" as LGU {
  * **LeagueID** : INT  <<PK, IDENTITY>>
  --
  LeagueName : NVARCHAR(64) NOT NULL
  * LocationID  : INT        NOT NULL  <<FK>>
  ..unique..
  LeagueName
}

entity "Basketball.Seasons" as SEA {
  * **SeasonID** : INT  <<PK, IDENTITY>>
  --
  * LeagueID : INT  NOT NULL  <<FK>>
  StartDate  : DATE NOT NULL
  EndDate    : DATE NOT NULL  <<UNIQUE>>
}

entity "Basketball.Teams" as TEA {
  * **TeamID** : INT  <<PK, IDENTITY>>
  --
  * SeasonID : INT          NOT NULL  <<FK>>
  TeamName   : NVARCHAR(64) NOT NULL  <<UNIQUE>>
}

entity "Basketball.Games" as GAM {
  * **GameID** : INT  <<PK, IDENTITY>>
  --
  * HomeTeamID    : INT  NOT NULL  <<FK→Teams>>
  * AwayTeamID    : INT  NOT NULL  <<FK→Teams>>
  HomeTeamScore  : INT  NOT NULL
  AwayTeamScore  : INT  NOT NULL
  CourtNumber    : INT  NOT NULL
  OvertimeCount  : INT  NOT NULL  DEFAULT 0
  Date           : DATE NOT NULL
}

entity "Basketball.Players" as PLY {
  * **PlayerID** : INT  <<PK, IDENTITY>>
  --
  * TeamID      : INT           NOT NULL  <<FK>>
  JerseyNumber  : INT           NOT NULL
  FirstName     : NVARCHAR(32)  NOT NULL
  LastName      : NVARCHAR(32)  NOT NULL
  Position      : NVARCHAR(2)   NULL
  Age           : INT           NULL
  Height        : NVARCHAR(16)  NULL
  Weight        : INT           NULL
}

entity "Basketball.PlayerGameStats" as PGS {
  * **PlayerID** : INT  <<PK, FK→Players>>
  * **GameID**   : INT  <<PK, FK→Games>>
  --
  * TeamID          : INT  NOT NULL  <<FK→Teams>>
  PlayingTime       : INT  NOT NULL  DEFAULT 0
  Turnovers         : INT  NOT NULL  DEFAULT 0
  Rebounds          : INT  NOT NULL  DEFAULT 0
  Assists           : INT  NOT NULL  DEFAULT 0
  Steals            : INT  NOT NULL  DEFAULT 0
  Blocks            : INT  NOT NULL  DEFAULT 0
  FieldGoalsMade    : INT  NOT NULL  DEFAULT 0  <<CHECK ≤ FieldGoalsTaken>>
  FieldGoalsTaken   : INT  NOT NULL  DEFAULT 0
  ThreePointersMade : INT  NOT NULL  DEFAULT 0  <<CHECK ≤ ThreePointersTaken>>
  ThreePointersTaken: INT  NOT NULL  DEFAULT 0
  PersonalFouls     : INT  NOT NULL  DEFAULT 0
  ..computed (app layer)..
  Points = FieldGoalsMade×2 + ThreePointersMade×3
}

entity "Basketball.Users" as USR {
  * **UserID** : INT  <<PK, IDENTITY>>
  --
  Username     : NVARCHAR(64)  NOT NULL  <<UNIQUE>>
  PasswordHash : NVARCHAR(64)  NOT NULL  (SHA-256 hex)
  IsAdmin      : BIT           NOT NULL  DEFAULT 0
}

'================================================
' RELATIONSHIPS (Crow's Foot)
'================================================

' A Location hosts zero-or-many Leagues
LOC ||--o{ LGU : "hosts >"

' A League runs zero-or-many Seasons
LGU ||--o{ SEA : "runs >"

' A Season contains zero-or-many Teams
SEA ||--o{ TEA : "contains >"

' A Team plays zero-or-many Games as Home team
TEA ||--o{ GAM : "home team >"

' A Team plays zero-or-many Games as Away team
TEA ||--o{ GAM : "away team >"

' A Team has zero-or-many Players
TEA ||--o{ PLY : "has >"

' A Player has zero-or-many stat rows (one per game played)
PLY ||--o{ PGS : "logged in >"

' A Game has zero-or-many stat rows (one per player)
GAM ||--o{ PGS : "recorded in >"

' A Team is referenced by stat rows (denormalized for query speed)
TEA ||--o{ PGS : "team ref >"

' Users table is standalone (no FK to other tables)

@enduml
